feat:review 코드 리뷰 수정사항 반영 및 단위테스트 구현